# atelier

./: LICENSE  README.md  atelier-spec.md  pyproject.toml  work.txt
analysis/: diagnostics.json  exploration.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataPanel.tsx  ModelPanel.tsx
frontend/src/components/charts/: FactorChart.tsx  FactorChartsPanel.tsx  index.ts
frontend/src/components/ui/: ContextMenu.tsx  PageBackground.tsx
frontend/src/lib/: api.ts  constants.ts  logger.ts
frontend/src/pages/: LandingPage.tsx  ModelBuilderPage.tsx  ModelConfigPage.tsx
frontend/src/types/: diagnostics.ts  exploration.ts  index.ts  model.ts
src/atelier/: __main__.py  app.py  cli.py  config.py
src/atelier/api/: datasets.py  explore.py  fit.py  models.py  projects.py
src/atelier/db/: engine.py  migrations.py  models.py
src/atelier/schemas/: __init__.py  dataset.py  model_save.py  model_spec.py  project.py
src/atelier/services/: __init__.py  dataset_service.py  model_service.py
src/atelier/static/: index.html
src/atelier/static/assets/: LandingPage-9NLKNqab.js  LandingPage-Cd2iF0NZ.js  LandingPage-DyMG8OVw.js  LandingPage-MnIeQsNB.js  ModelBuilderPage-6xQNFcKY.js  ModelBuilderPage-B0UnEuNE.js  ModelBuilderPage-Cmi15TPd.js  ModelBuilderPage-DavvyP8z.js  ModelConfigPage-BVNgy9wC.js  ModelConfigPage-WX0ZeJVs.js  clock-B6qmGUEk.js  (+32 more)
tests/: conftest.py
tests/test_api/: test_datasets.py  test_explore.py  test_fit.py
tests/test_services/: test_dataset_service.py
