[project]
name = "atel"
version = "0.1.4"
description = "Browser-based GLM workbench for actuarial pricing"
readme = "README.md"
license = { text = "Elastic-2.0" }
requires-python = ">=3.13"
dependencies = [
    "rustystats>=0.4.13",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "polars>=1.0.0",
    "click>=8.1.0",
    "websockets>=14.0",
]

[project.scripts]
atelier = "atelier.cli:main"
atel = "atelier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
